--- a/index.html
+++ b/index.html
@@ -3,24 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>ArecoBUS</title>
-
+  <title>Arecobus</title>
   <base href="/" />
-
-
-
-
   <meta name="viewport"
     content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
-
-
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
-
   <link rel="manifest" href="/manifest.json" />
-
-  <link rel="shortcut icon" type="image/png" href="/public/ArecoBus-lgo.png" />
-
+  <link rel="icon" type="icon" href="/public/ArecoBus-logo.png" />
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-title" content="Ionic App" />
