--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Arecobus</title>
+  <meta name="description" content="Arecobus: Planifica tus viajes fácilmente con horarios actualizados, rutas detalladas y precios claros. Descubre la forma más eficiente de moverte con Arecobus, tu compañero de viaje ideal.">
+  <title>Arecobus | Tu compañero de viaje</title>
   <base href="/" />
   <meta name="viewport"
     content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
